src/objects/Apttus_Config2__LookupFieldSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Controls lookup field behavior in Apttus CPQ.</description>
    <fields>
        <fullName>Apttus_Config2__DefaultFlagField__c</fullName>
        <description>Field API from the Junction object to determine the default value of a lookup field, this field must be a checkbox.</description>
        <inlineHelpText>Field API from the Junction object to determine the default value of a lookup field, this field must be a checkbox.</inlineHelpText>
        <label>Junction Default Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayColumns__c</fullName>
        <description>Configure the columns of the Lookup popup Fields from the Lookup Object which you&apos;d like to display by populating with the fields APIs from the Lookup Object such as Name__c, additional can be added comma-separated without spaces.</description>
        <inlineHelpText>Configure the columns of the Lookup popup Fields from the Lookup Object which you&apos;d like to display by populating with the fields APIs from the Lookup Object such as Name__c, additional can be added comma-separated without spaces.</inlineHelpText>
        <label>Lookup Display Columns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FilterCriteria__c</fullName>
        <description>Formula to filter lookup values; Formulas are built with with left as a lookup or junction and right as the object. For example Account__c.City__c = Apttus_Config2__Lineitem__c.City__c, show accounts with cities with the same Line item City.</description>
        <inlineHelpText>Formula to filter lookup values; Formulas are built with with left as a lookup or junction and right as the object. For example Account__c.City__c = Apttus_Config2__Lineitem__c.City__c, show accounts with cities with the same Line item City.</inlineHelpText>
        <label>Filter Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LookupFieldName__c</fullName>
        <description>API name of the Lookup field on the Line Item or Product Attribute Value Object defined under Object Name.</description>
        <inlineHelpText>API name of the Lookup field on the Line Item or Product Attribute Value Object defined under Object Name.</inlineHelpText>
        <label>Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LookupRecordLimit__c</fullName>
        <description>The maximum number of records to query for the lookup field dropdown.</description>
        <inlineHelpText>The maximum number of records to query for the lookup field dropdown.</inlineHelpText>
        <label>Lookup Record Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ObjectName__c</fullName>
        <description>The API name of the object where the lookup field exists. Valid entries are Apttus_Config2__LineItem__c or Apttus_Config2__ProductAttributeValue__c.</description>
        <inlineHelpText>The API name of the object where the lookup field exists. Valid entries are Apttus_Config2__LineItem__c or Apttus_Config2__ProductAttributeValue__c.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceField__c</fullName>
        <description>Field on the junction object which you would like to filter the lookup field by.</description>
        <inlineHelpText>Field on the junction object which you would like to filter the lookup field by.</inlineHelpText>
        <label>Junction Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceObject__c</fullName>
        <description>The junction object which you would like to filter the lookup values. This is a custom object that you can define to filter the values which do not exist on the Lookup Object itself.</description>
        <inlineHelpText>The junction object which you would like to filter the lookup values. This is a custom object that you can define to filter the values which do not exist on the Lookup Object itself.</inlineHelpText>
        <label>Junction Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lookup Field Settings</label>
</CustomObject>